2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Widget: Add some methods.

	* gtk/src/widget.hg: Added set_state_flags(), get_state_flags(), 
	reset_state_flags(), set_device_enable(), get_device_enabled(), and 
	reset_style().

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Widget: Simplify the get_request_mode vfunc wrapping.

	* gtk/src/widget.[hg|ccg]: Use a simple _WRAP_VFUNC() now that the C code 
	behaves properly. See https://bugzilla.gnome.org/show_bug.cgi?id=639073#c17

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Wrapped some new GTK+ functions, removing some too.

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/cellarea.hg: Remove set_style_detail() and get_style_detail().
	* gtk/src/cellrenderer.hg: Added get_state().
	* gtk/src/textview.hg: Added get_cursor_locations().
	
2011-01-27  Krzesimir Nowak  <qdlacz@gmail.com>

	Fixed compilation errors introduced in previous changes.

	* gdk/src/types.ccg:
	* gdk/src/types.hg: Added traits for Glib::ustring GdkAtoms.
	* gdk/src/display.ccg:
	* gdk/src/window.ccg: Use new traits.
	* gtk/src/textbuffer.ccg: Ditto. And remove the bogus word.

2011-01-27  Krzesimir Nowak  <qdlacz@gmail.com>

	Adapted Gdk and Gtk to vectorutils.

	* gdk/gdkmm/list.h: Deleted.
	* gdk/gdkmm/filelist.am: Removed list.h from build.
	* gdk/src/color.hg:
	* gdk/src/device.ccg:
	* gdk/src/device.hg:
	* gdk/src/devicemanager.ccg:
	* gdk/src/devicemanager.hg:
	* gdk/src/display.ccg:
	* gdk/src/dragcontext.ccg:
	* gdk/src/dragcontext.hg:
	* gdk/src/pixbuf.ccg:
	* gdk/src/pixbuf.hg:
	* gdk/src/pixbufformat.hg:
	* gdk/src/rgba.hg:
	* gdk/src/screen.hg:
	* gdk/src/timecoord.hg:
	* gdk/src/types.hg:
	* gdk/src/window.ccg:
	* gdk/src/window.hg: Adapted Gdk to vectorutils.
	* gtk/gtkmm/listviewtext.cc:
	* gtk/gtkmm/stock.cc:
	* gtk/gtkmm/stock.h:
	* gtk/gtkmm/stockid.h:
	* gtk/gtkmm/targetentry.h:
	* gtk/src/aboutdialog.ccg:
	* gtk/src/aboutdialog.hg:
	* gtk/src/action.ccg:
	* gtk/src/action.hg: