@@ -41,7 +41,7 @@ protected:
 public:
   _WRAP_CREATE()
 
-  _WRAP_METHOD(void add(const Gtk::StockID& stock_id, const IconSet& icon_set), gtk_icon_factory_add)
+  _WRAP_METHOD(void add(const Gtk::StockID& stock_id, const Glib::RefPtr<IconSet>& icon_set), gtk_icon_factory_add)
   _WRAP_METHOD(void add_default(), gtk_icon_factory_add_default)
   _WRAP_METHOD(void remove_default(), gtk_icon_factory_remove_default)
 };
