@@ -30,9 +30,9 @@ Image::Image(const Gtk::StockID& stock_id, IconSize size)
   _CONSTRUCT("stock", stock_id.get_c_str(), "icon-size", (GtkIconSize) int(size))
 {}
 
-Image::Image(IconSet& icon_set, IconSize size)
+Image::Image(const Glib::RefPtr<IconSet>& icon_set, IconSize size)
 :
-  _CONSTRUCT("icon-set", icon_set.gobj(), "icon-size", (GtkIconSize) int(size))
+  _CONSTRUCT("icon-set", (icon_set ? icon_set->gobj() : 0), "icon-size", (GtkIconSize) int(size))
 {}
 
 Image::Image(const Glib::RefPtr<Gdk::PixbufAnimation>& animation)
@@ -51,7 +51,7 @@ void Image::get_stock(Gtk::StockID& stock_id, IconSize& size) const
   stock_id = Gtk::StockID(pStockID); // the StockID ctor checks for 0
 }
 
-void Image::get_icon_set(IconSet& icon_set, IconSize& size) const
+void Image::get_icon_set(Glib::RefPtr<IconSet>& icon_set, IconSize& size) const
 {
   GtkIconSet* pIconSet = 0;
   GtkIconSize icon_size = GTK_ICON_SIZE_INVALID;
