@@ -95,13 +95,13 @@ public:
    */
   Image(const Gtk::StockID& stock_id, IconSize size);
 
-  Image(IconSet& icon_set, IconSize size);
+  Image(const Glib::RefPtr<IconSet>& icon_set, IconSize size);
   explicit Image(const Glib::RefPtr<Gdk::PixbufAnimation>& animation);
 
   _WRAP_METHOD(void set(const std::string& filename), gtk_image_set_from_file)
   _WRAP_METHOD(void set(const Glib::RefPtr<Gdk::Pixbuf>& pixbuf), gtk_image_set_from_pixbuf)
   _WRAP_METHOD(void set(const Gtk::StockID& stock_id, IconSize size), gtk_image_set_from_stock)
-  _WRAP_METHOD(void set(IconSet& icon_set, IconSize size), gtk_image_set_from_icon_set)
+  _WRAP_METHOD(void set(const Glib::RefPtr<IconSet>& icon_set, IconSize size), gtk_image_set_from_icon_set)
   _WRAP_METHOD(void set(const Glib::RefPtr<Gdk::PixbufAnimation>& animation), gtk_image_set_from_animation)
   _WRAP_METHOD(void set(const Glib::RefPtr<const Gio::Icon>& icon, IconSize size), gtk_image_set_from_gicon)
 
@@ -115,7 +115,7 @@ public:
   _WRAP_METHOD(Glib::RefPtr<Gdk::Pixbuf> get_pixbuf(), gtk_image_get_pixbuf, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Gdk::Pixbuf> get_pixbuf() const, gtk_image_get_pixbuf, refreturn, constversion)
   void get_stock(Gtk::StockID& stock_id, IconSize& size) const;
-  void get_icon_set(IconSet& icon_set, IconSize& size) const;
+  void get_icon_set(Glib::RefPtr<IconSet>& icon_set, IconSize& size) const;
   _WRAP_METHOD(Glib::RefPtr<Gdk::PixbufAnimation> get_animation(), gtk_image_get_animation, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Gdk::PixbufAnimation> get_animation() const, gtk_image_get_animation, refreturn, constversion)
 
@@ -150,7 +150,7 @@ public:
   _WRAP_PROPERTY("pixbuf", Glib::RefPtr<Gdk::Pixbuf>)
   _WRAP_PROPERTY("file", Glib::ustring)
   _WRAP_PROPERTY("stock", Glib::ustring)
-  _WRAP_PROPERTY("icon-set", Gtk::IconSet)
+  _WRAP_PROPERTY("icon-set", Glib::RefPtr<IconSet>)
   _WRAP_PROPERTY("icon-size", int)
   _WRAP_PROPERTY("pixel-size", int)
   _WRAP_PROPERTY("pixbuf-animation", Glib::RefPtr<Gdk::PixbufAnimation>)
