@@ -105,10 +105,10 @@ public:
                                            ...), gtk_style_context_get_style)
 */
 
-  _WRAP_METHOD(IconSet lookup_icon_set(const Glib::ustring& stock_id), gtk_style_context_lookup_icon_set)
+  _WRAP_METHOD(Glib::RefPtr<IconSet> lookup_icon_set(const Glib::ustring& stock_id), gtk_style_context_lookup_icon_set, refreturn)
 
 /* TODO: Move this to Iconset?
-  _WRAP_METHOD(GdkPixbuf  * gtk_icon_set_render_icon_pixbuf   (const IconSet& con_set,
+  _WRAP_METHOD(GdkPixbuf  * gtk_icon_set_render_icon_pixbuf   (const Glib::RefPtr<IconSet>& con_set,
                                                 GtkStyleContext *context,
                                                 GtkIconSize      size), gtk_icon_set_render_icon_pixbuf)
 */
