@@ -1,5 +1,17 @@
 2011-01-28  Murray Cumming  <murrayc@murrayc.com>
 
+	IconSet: Use this via a RefPtr.
+
+	* gtk/src/iconset.[h|cc]: Use this via RefPtr, because that is what the 
+	C API expects, though this is not a GObject.
+	* gtk/gtkmm/stock.[h|cc]:
+	* gtk/src/iconfactory.hg:
+	* gtk/src/image.[hg|ccg]:
+	* gtk/src/stylecontext.hg:
+	* tools/m4/convert_gtk.m4: Adapt.
+
+2011-01-28  Murray Cumming  <murrayc@murrayc.com>
+
 	Widget: Add some methods.
 
 	* gtk/src/widget.hg: Added set_state_flags(), get_state_flags(), 
